// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTables should render correctly 1`] = `
<DocumentFragment>
  <div
    class="pf-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="ins-c-conditional-filter"
            >
              <input
                aria-invalid="false"
                aria-label="text input"
                class="pf-c-form-control ins-c-conditional-filter "
                data-ouia-component-id="ConditionalFilter"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="default-input"
                type="text"
                value=""
                widget-type="InsightsInput"
              />
              <svg
                aria-hidden="true"
                class="ins-c-search-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="pf-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-c-pagination pf-m-compact"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF4/Pagination"
            data-ouia-safe="true"
            id="pagination-options-menu-2"
            style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-c-pagination__total-items"
            >
              <b>
                1 - 2
              </b>
               of 
              <b>
                2
              </b>
               
            </div>
            <div
              class="pf-c-options-menu"
              data-ouia-component-type="PF4/PaginationOptionsMenu"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
              >
                <span
                  class="pf-c-options-menu__toggle-text"
                >
                  <b>
                    1 - 2
                  </b>
                   of 
                  <b>
                    2
                  </b>
                   
                </span>
                <button
                  aria-expanded="false"
                  aria-label="Items per page"
                  class="  pf-c-options-menu__toggle-button"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pagination-options-menu-toggle-2"
                  type="button"
                >
                  <span
                    class="pf-c-options-menu__toggle-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-c-pagination__nav"
            >
              <div
                class="pf-c-pagination__nav-control"
              >
                <button
                  aria-disabled="true"
                  aria-label="Go to previous page"
                  class="pf-c-button pf-m-plain pf-m-disabled"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-pagination__nav-control"
              >
                <button
                  aria-disabled="true"
                  aria-label="Go to next page"
                  class="pf-c-button pf-m-plain pf-m-disabled"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="ins-primary-data-toolbar-expandable-content-1"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="table"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="ouia-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <th
          aria-sort="ascending"
          class="pf-c-table__sort pf-m-selected pf-m-width-35"
          data-key="0"
          data-label="Task"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Task
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort pf-m-width-20"
          data-key="1"
          data-label="Systems"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Systems
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
        <th
          aria-sort="none"
          class="pf-c-table__sort pf-m-width-20"
          data-key="2"
          data-label="Run date/time"
          scope="col"
        >
          <button
            class="pf-c-table__button"
            type="button"
          >
            <div
              class="pf-c-table__button-content"
            >
              <span
                class="pf-c-table__text"
              >
                Run date/time
              </span>
              <span
                class="pf-c-table__sort-indicator"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                  />
                </svg>
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class=""
      role="rowgroup"
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-m-width-35"
          data-key="0"
          data-label="Task"
        >
          <a
            href="beta/insights/tasks"
          >
            taskA
          </a>
        </td>
        <td
          class="pf-m-width-20"
          data-key="1"
          data-label="Systems"
        >
          10
        </td>
        <td
          class="pf-m-width-20"
          data-key="2"
          data-label="Run date/time"
        >
          Running
        </td>
      </tr>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class="pf-m-width-35"
          data-key="0"
          data-label="Task"
        >
          <a
            href="beta/insights/tasks"
          >
            taskB
          </a>
        </td>
        <td
          class="pf-m-width-20"
          data-key="1"
          data-label="Systems"
        >
          5
        </td>
        <td
          class="pf-m-width-20"
          data-key="2"
          data-label="Run date/time"
        >
          20 Apr 2022, 11:10 UTC
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="pf-c-toolbar ins-c-table__toolbar ins-m-footer"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-1"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-0"
  >
    <div
      class="pf-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
      data-ouia-component-type="PF4/Pagination"
      data-ouia-safe="true"
      id="pagination-options-menu-3"
      style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
    >
      <div
        class="pf-c-options-menu pf-m-top"
        data-ouia-component-type="PF4/PaginationOptionsMenu"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            class="pf-c-options-menu__toggle-text"
          >
            <b>
              1 - 10
            </b>
             of 
            <b>
              0
            </b>
             
          </span>
          <button
            aria-expanded="false"
            aria-label="Items per page"
            class="  pf-c-options-menu__toggle-button"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pagination-options-menu-toggle-3"
            type="button"
          >
            <span
              class="pf-c-options-menu__toggle-button-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-c-pagination__nav"
      >
        <div
          class="pf-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-disabled="true"
            aria-label="Go to first page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled="true"
            aria-label="Go to previous page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            class="pf-c-form-control"
            max="1"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled="true"
            aria-label="Go to next page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-disabled="true"
            aria-label="Go to last page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TasksTables should render empty 1`] = `
<DocumentFragment>
  <div
    class="pf-c-toolbar  ins-c-primary-toolbar"
    data-ouia-component-id="PrimaryToolbar"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="ins-primary-data-toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
        >
          <div
            class="pf-c-toolbar__item ins-c-primary-toolbar__filter"
          >
            <div
              class="ins-c-conditional-filter"
            >
              <input
                aria-invalid="false"
                aria-label="text input"
                class="pf-c-form-control ins-c-conditional-filter "
                data-ouia-component-id="ConditionalFilter"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="default-input"
                type="text"
                value=""
                widget-type="InsightsInput"
              />
              <svg
                aria-hidden="true"
                class="ins-c-search-icon"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="pf-c-toolbar__item ins-c-primary-toolbar__pagination"
        >
          <div
            class="pf-c-pagination pf-m-compact"
            data-ouia-component-id="CompactPagination"
            data-ouia-component-type="PF4/Pagination"
            data-ouia-safe="true"
            id="pagination-options-menu-6"
            style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
          >
            <div
              class="pf-c-pagination__total-items"
            >
              <b>
                0 - 0
              </b>
               of 
              <b>
                0
              </b>
               
            </div>
            <div
              class="pf-c-options-menu"
              data-ouia-component-type="PF4/PaginationOptionsMenu"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
              >
                <span
                  class="pf-c-options-menu__toggle-text"
                >
                  <b>
                    0 - 0
                  </b>
                   of 
                  <b>
                    0
                  </b>
                   
                </span>
                <button
                  aria-expanded="false"
                  aria-label="Items per page"
                  class="  pf-c-options-menu__toggle-button"
                  data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pagination-options-menu-toggle-6"
                  type="button"
                >
                  <span
                    class="pf-c-options-menu__toggle-button-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
            <nav
              aria-label="Pagination"
              class="pf-c-pagination__nav"
            >
              <div
                class="pf-c-pagination__nav-control"
              >
                <button
                  aria-disabled="true"
                  aria-label="Go to previous page"
                  class="pf-c-button pf-m-plain pf-m-disabled"
                  data-action="previous"
                  data-ouia-component-id="OUIA-Generated-Button-plain-7"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="pf-c-pagination__nav-control"
              >
                <button
                  aria-disabled="true"
                  aria-label="Go to next page"
                  class="pf-c-button pf-m-plain pf-m-disabled"
                  data-action="next"
                  data-ouia-component-id="OUIA-Generated-Button-plain-8"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </button>
              </div>
            </nav>
          </div>
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="ins-primary-data-toolbar-expandable-content-3"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
  <table
    aria-label="table"
    class="pf-c-table pf-m-grid-md"
    data-ouia-component-id="ouia-table"
    data-ouia-component-type="PF4/Table"
    data-ouia-safe="true"
    role="grid"
  >
    <thead
      class=""
    >
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      />
    </thead>
  </table>
  <div
    class="pf-c-toolbar ins-c-table__toolbar ins-m-footer"
    data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-2"
    data-ouia-component-type="RHI/TableToolbar"
    data-ouia-safe="true"
    id="pf-random-id-1"
  >
    <div
      class="pf-c-pagination pf-m-bottom"
      data-ouia-component-id="OUIA-Generated-Pagination-bottom-2"
      data-ouia-component-type="PF4/Pagination"
      data-ouia-safe="true"
      id="pagination-options-menu-7"
      style="--pf-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
    >
      <div
        class="pf-c-options-menu pf-m-top"
        data-ouia-component-type="PF4/PaginationOptionsMenu"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-options-menu__toggle pf-m-plain pf-m-text"
        >
          <span
            class="pf-c-options-menu__toggle-text"
          >
            <b>
              1 - 10
            </b>
             of 
            <b>
              0
            </b>
             
          </span>
          <button
            aria-expanded="false"
            aria-label="Items per page"
            class="  pf-c-options-menu__toggle-button"
            data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe="true"
            id="pagination-options-menu-toggle-7"
            type="button"
          >
            <span
              class="pf-c-options-menu__toggle-button-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <nav
        aria-label="Pagination"
        class="pf-c-pagination__nav"
      >
        <div
          class="pf-c-pagination__nav-control pf-m-first"
        >
          <button
            aria-disabled="true"
            aria-label="Go to first page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="first"
            data-ouia-component-id="OUIA-Generated-Button-plain-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled="true"
            aria-label="Go to previous page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="previous"
            data-ouia-component-id="OUIA-Generated-Button-plain-10"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-page-select"
        >
          <input
            aria-label="Current page"
            class="pf-c-form-control"
            max="1"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="pf-c-pagination__nav-control"
        >
          <button
            aria-disabled="true"
            aria-label="Go to next page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="next"
            data-ouia-component-id="OUIA-Generated-Button-plain-11"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 256 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-pagination__nav-control pf-m-last"
        >
          <button
            aria-disabled="true"
            aria-label="Go to last page"
            class="pf-c-button pf-m-plain pf-m-disabled"
            data-action="last"
            data-ouia-component-id="OUIA-Generated-Button-plain-12"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
              />
            </svg>
          </button>
        </div>
      </nav>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</DocumentFragment>
`;
